--- a/resources/assets/sass/style.sass
+++ b/resources/assets/sass/style.sass
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Lato)
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap"
 
 html, body
@@ -22,4 +23,3 @@ body
 
 .title
     font-size: 96px
-
