--- a/resources/assets/sass/style.sass
+++ b/resources/assets/sass/style.sass
@@ -1,25 +1,3 @@
 @import url(https://fonts.googleapis.com/css?family=Lato)
-@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap"
+@import url(https://bootswatch.com/journal/bootstrap.min.css)
 
-html, body
-    height: 100%
-
-body
-    margin: 0
-    padding: 0
-    width: 100%
-    display: table
-    font-weight: 100
-    font-family: 'Lato', sans-serif
-
-.container
-    text-align: center
-    display: table-cell
-    vertical-align: middle
-
-.content
-    text-align: center
-    display: inline-block
-
-.title
-    font-size: 96px
