--- a/resources/assets/sass/style.sass
+++ b/resources/assets/sass/style.sass
@@ -1,3 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Lato)
 @import url(https://bootswatch.com/journal/bootstrap.min.css)
 
+button.btn.btn-info.btn-left
+    margin-left: 70px
+    background-color: #0057b7
